// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at https://mozilla.org/MPL/2.0/.

syntax = "proto3";

package pb;
option go_package = "github.com/lachlanorr/rocketcycle/examples/rpg/pb";

import "extensions.proto";

/*
message Trade {
    option (rkcy.pb.is_concern) = true;

    string id = 1 [(rkcy.pb.is_key) = true];
    string username = 2;
    bool active = 3;

    Limits limits = 4;
}
*/

message TradeCategory {
    option (rkcy.is_config) = true;

    string id = 1 [(rkcy.is_key) = true];
    int32 max_characters_per_player = 2;
}
